# openclaw-old

./: .gitignore  .last_human_contact  FUTURE_PROJECTS.md  GS_PRO_COURSES.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TASKS.md  TOOLS.md  USER.md  backup-workspace.sh  openclaw-runbook-implementation-plan.md  setup-drive.sh  todo.html
.clawhub/: lock.json
archive/: voice_memo_responder.py
archives/: disney-jokes-100.md  disney-packing-list-2026-02-05.md
business-ideas/: shazam-for-slides.md
memory/: 2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04-1937.md  2026-02-04.md  2026-02-05.md  2026-02-12.md  2026-02-14.md  2026-02-17-arb-bot-review.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-22.md
projects/alpaca-trading/: .env  README.md  RESTRARTED.md  approach.md  design.md  pyproject.toml  requirements.md  tasks.md
projects/alpaca-trading/config/: daemon.plist
projects/alpaca-trading/data/: trades.db
projects/alpaca-trading/scripts/: analyze.py  backtest.py  backtest_real.py  execute_plan.py  morning_analysis.py  paper_trade.py  prepare_tomorrow.sh  profit_report.py  rebalance.py  start.sh  status.sh  stop.sh
projects/alpaca-trading/src/: alpaca_client.py  database.py  executor.py  learner.py  logger.py  main.py  models.py  risk_manager.py  scheduler.py  strategy_manager.py
projects/alpaca-trading/src/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py
projects/alpaca-trading/tests/: test_trading.py
runbook/: IMPLEMENTATION_PLAN.md
scholar/: RESEARCHER_IDENTITY.md
scripts/: backup.py  daily-joke.sh  (+10 more)
(+94 files in other folders)
